# sophus_ros_toolkit

sophus_ros_conversions/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml  rosdoc.yaml
sophus_ros_conversions/include/: sophus_ros_conversions.hpp
sophus_ros_conversions/include/sophus_ros_conversions/: eigen.hpp  geometry.hpp
sophus_ros_conversions/src/lib/: eigen.cpp  geometry.cpp
